Bug 319374, XPath should ignore changes to anonymous content, r+sr=sicking, a=1.9+